# neural-network-experiment

./: .gitmodules  CMakeLists.txt
py/: nn.py
src/: dat_reader.c  data_set.h  neural_network.c  neural_network.h  neural_network_test.c
src/graph/: line_chart.c  line_chart.h
src/matrix/: .matrix.c.swp  .matrix.h.swp  matrix.c  matrix.h
test/: graph_test.c  main_unittest.cc  matrix_unittest.cc
